Wed May 13 14:49:52 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Allow --filter to specify the
	  character set of the output the filter produces.

Wed May 13 01:34:09 GMT 2015  Olly Betts <olly@survex.com>

	* outlookmsg2html.in: Fix handling of message/rfc822 subparts.

Tue May 12 14:07:27 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Allow --filter to handle commands
	  which produce output in a temporary file rather than on stdout.

Tue May 12 13:37:01 GMT 2015  Olly Betts <olly@survex.com>

	* omindex.cc: Handle application/vnd.ms-excel via commands map instead
	  of a hardcoded case.

Tue May 12 12:56:40 GMT 2015  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Add support for %f in command passed
	  to --filter to allow specifying commands where the input file is
	  not the final argument.  Fixed #570, reported by "catkin".

Tue May 12 11:17:20 GMT 2015  Olly Betts <olly@survex.com>

	* diritor.h,omindex.cc,values.h: Add -track-ctime option to allow
	  omindex to pick up changes to file ownership and permissions.

Tue May 12 07:38:45 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo.

Mon May 11 07:05:24 GMT 2015  Olly Betts <olly@survex.com>

	* cdb_hash.cc,md5.cc: Remove 'register' as it's deprecated, and
	  likely to just be ignored by any modern compiler anyway.

Tue May 05 12:25:20 GMT 2015  Olly Betts <olly@survex.com>

	* docs/encodings.rst: $prettyurl undoes %-encoding of UTF-8 in 1.2.21
	  and later too.

Tue May 05 01:40:17 GMT 2015  Olly Betts <olly@survex.com>

	* omega.cc: Drop compilation date and time from output - they prevent
	  reproducible builds and the version number is sufficient
	  information.

Fri May 01 09:36:27 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac,md5.h,values.h: Now we require C++11, just include
	  <cstdint> for uint32_t.

Fri May 01 09:02:34 GMT 2015  Olly Betts <olly@survex.com>
