@@ -1,3 +1,8 @@
+Wed May 13 15:00:49 GMT 2015  Olly Betts <olly@survex.com>
+
+	* omindex.cc: Handle text/x-perl and application/x-dvi via the
+	  commands map instead of hardcoded cases.
+
 Wed May 13 14:49:52 GMT 2015  Olly Betts <olly@survex.com>
 
 	* docs/overview.rst,omindex.cc: Allow --filter to specify the
